new codes added

--- a/wishlist.html
+++ b/wishlist.html
@@ -117,7 +117,7 @@
     <!-- BEGIN HEADER -->
     <div class="header">
       <div class="container">
-        <a class="site-logo" href="index.html"><img src="assets/corporate/img/logos/logo-shop-red.png" alt="Metronic Shop UI"></a>
+        <a class="site-logo" href="index.html"><img src="theme/assets/corporate/img/logos/logo-shop-red.png" alt="Metronic Shop UI"></a>
 
         <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
 
@@ -133,35 +133,35 @@
             <div class="top-cart-content">
               <ul class="scroller" style="height: 250px;">
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/box.jpg" alt="OXO Foldable Drainer Rack, Bottle Drain Rack, Convenient for Water Bottles and More" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/box.jpg" alt="OXO Foldable Drainer Rack, Bottle Drain Rack, Convenient for Water Bottles and More" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">OXO Foldable Drainer Rack, Bottle Drain Rack, Convenient for Water Bottles and More</a></strong>
                   <em>$10</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/box1.jpg" alt="LUXEAR Divided Serving Tray with Lid and Handle Snack Box " width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/box1.jpg" alt="LUXEAR Divided Serving Tray with Lid and Handle Snack Box " width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">LUXEAR Divided Serving Tray with Lid and Handle Snack Box </a></strong>
                   <em>$8</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/kapor.jpg" alt="HomeHacks Storage 3-Pack Clothes Organizer Storage Bags" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/kapor.jpg" alt="HomeHacks Storage 3-Pack Clothes Organizer Storage Bags" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">HomeHacks Storage 3-Pack Clothes Organizer Storage Bags</a></strong>
                   <em>$11</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/ff.jpg" alt="Simple Joys by Carter's Baby Girls' Infant and Toddler Rompers " width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/ff.jpg" alt="Simple Joys by Carter's Baby Girls' Infant and Toddler Rompers " width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">Simple Joys by Carter's Baby Girls' Infant and Toddler Rompers </a></strong>
                   <em>$21</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/bbb.jpg" alt="1 Set baby boy clothes girls outfits boys" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/bbb.jpg" alt="1 Set baby boy clothes girls outfits boys" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">1 Set baby boy clothes girls outfits boys</a></strong>
                   <em>$14</em>
@@ -262,11 +262,11 @@
                       </div>
                       <div class="col-md-12 nav-brands">
                         <ul>
-                          <li><a href="product-list.html"><img title="esprit" alt="esprit" src="assets/pages/img/brands/esprit.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="gap" alt="gap" src="assets/pages/img/brands/gap.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="next" alt="next" src="assets/pages/img/brands/next.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="puma" alt="puma" src="assets/pages/img/brands/puma.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="zara" alt="zara" src="assets/pages/img/brands/zara.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="esprit" alt="esprit" src="theme/assets/pages/img/brands/esprit.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="gap" alt="gap" src="theme/assets/pages/img/brands/gap.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="next" alt="next" src="theme/assets/pages/img/brands/next.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="puma" alt="puma" src="theme/assets/pages/img/brands/puma.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="zara" alt="zara" src="theme/assets/pages/img/brands/zara.jpg"></a></li>
                         </ul>
                       </div>
                     </div>
@@ -287,7 +287,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/hany.jpg" class="img-responsive" alt="Southern Style Nuts Honey Roasted Hunter Mix"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/hany.jpg" class="img-responsive" alt="Southern Style Nuts Honey Roasted Hunter Mix"></a>
                           </div>
                           <h3><a href="item.html">Southern Style Nuts Honey Roasted Hunter Mix</a></h3>
                           <div class="pi-price">$24.10</div>
@@ -297,7 +297,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/gg.jpg" class="img-responsive" alt="PLANTERS Deluxe Mixed Nuts, Cashews, Almonds, Brazil Nuts Mix, Pistachios, Pecans, Lightly Salted, Snacks for Adults and Kids, Party Snack, 15.25oz"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/gg.jpg" class="img-responsive" alt="PLANTERS Deluxe Mixed Nuts, Cashews, Almonds, Brazil Nuts Mix, Pistachios, Pecans, Lightly Salted, Snacks for Adults and Kids, Party Snack, 15.25oz"></a>
                           </div>
                           <h3><a href="item.html">PLANTERS Deluxe Mixed Nuts, Cashews, Almonds, Brazil Nuts Mix, Pistachios, Pecans, Lightly Salted, Snacks for Adults and Kids, Party Snack, 15.25oz</a></h3>
                           <div class="pi-price">$19.10</div>
@@ -307,7 +307,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/bisss.jpg" class="img-responsive" alt="Oreo Vanilla Multipack Biscuits 248.4 g"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/bisss.jpg" class="img-responsive" alt="Oreo Vanilla Multipack Biscuits 248.4 g"></a>
                           </div>
                           <h3><a href="item.html">Oreo Vanilla Multipack Biscuits 248.4 g</a></h3>
                           <div class="pi-price">$22.30</div>
@@ -317,7 +317,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/pp.jpg" class="img-responsive" alt="Pure Temptation Gold Chocoblast "></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/pp.jpg" class="img-responsive" alt="Pure Temptation Gold Chocoblast "></a>
                           </div>
                           <h3><a href="item.html">Pure Temptation Gold Chocoblast </a></h3>
                           <div class="pi-price">$19.50</div>
@@ -356,9 +356,6 @@
                 <li><a href="terms-conditions-page.html">Terms &amp; Conditions</a></li>
               </ul>
             </li>
-            
-            
-            <li><a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes&amp;utm_source=download&amp;utm_medium=banner&amp;utm_campaign=metronic_frontend_freebie" target="_blank">Admin theme</a></li>
 
             <!-- BEGIN TOP SEARCH -->
             <li class="menu-search">
@@ -422,7 +419,7 @@
                   </tr>
                   <tr>
                     <td class="goods-page-image">
-                      <a href="javascript:;"><img src="assets/pages/img/products/green.jpg" alt="YMDUCH Women's Elegant Sleeveless Off Shoulder Bodycon Long Formal Party Evening Dress"></a>
+                      <a href="javascript:;"><img src="theme/assets/pages/img/products/green.jpg" alt="YMDUCH Women's Elegant Sleeveless Off Shoulder Bodycon Long Formal Party Evening Dress"></a>
                     </td>
                     <td class="goods-page-description">
                       <h3><a href="javascript:;">YMDUCH Women's Elegant Sleeveless Off Shoulder Bodycon Long Formal Party Evening Dress</a></h3>
@@ -442,7 +439,7 @@
                   </tr>
                   <tr>
                     <td class="goods-page-image">
-                      <a href="javascript:;"><img src="assets/pages/img/products/fl.jpg" alt="Women Summer Open Toe Sandals Casual Comfortable Bohemia Beach Flat Shoes"></a>
+                      <a href="javascript:;"><img src="theme/assets/pages/img/products/fl.jpg" alt="Women Summer Open Toe Sandals Casual Comfortable Bohemia Beach Flat Shoes"></a>
                     </td>
                     <td class="goods-page-description">
                       <h3><a href="javascript:;">Women Summer Open Toe Sandals Casual Comfortable Bohemia Beach Flat Shoes</a></h3>
@@ -475,18 +472,18 @@
     <div class="brands">
       <div class="container">
             <div class="owl-carousel owl-carousel6-brands">
-              <a href="product-list.html"><img src="assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
             </div>
         </div>
     </div>
@@ -620,11 +617,11 @@
           <!-- BEGIN PAYMENTS -->
           <div class="col-md-4 col-sm-4">
             <ul class="list-unstyled list-inline pull-right">
-              <li><img src="assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
-              <li><img src="assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
-              <li><img src="assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
-              <li><img src="assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
-              <li><img src="assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
+              <li><img src="theme/assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
+              <li><img src="theme/assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
+              <li><img src="theme/assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
+              <li><img src="theme/assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
+              <li><img src="theme/assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
             </ul>
           </div>
           <!-- END PAYMENTS -->
@@ -644,12 +641,12 @@
               <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-3">
                   <div class="product-main-image">
-                    <img src="assets/pages/img/products/model7.jpg" alt="Cool green dress with red bell" class="img-responsive">
+                    <img src="theme/assets/pages/img/products/model7.jpg" alt="Cool green dress with red bell" class="img-responsive">
                   </div>
                   <div class="product-other-images">
-                    <a href="javascript:;" class="active"><img alt="Berry Lace Dress" src="assets/pages/img/products/model3.jpg"></a>
-                    <a href="javascript:;"><img alt="Berry Lace Dress" src="assets/pages/img/products/model4.jpg"></a>
-                    <a href="javascript:;"><img alt="Berry Lace Dress" src="assets/pages/img/products/model5.jpg"></a>
+                    <a href="javascript:;" class="active"><img alt="Berry Lace Dress" src="theme/assets/pages/img/products/model3.jpg"></a>
+                    <a href="javascript:;"><img alt="Berry Lace Dress" src="theme/assets/pages/img/products/model4.jpg"></a>
+                    <a href="javascript:;"><img alt="Berry Lace Dress" src="theme/assets/pages/img/products/model5.jpg"></a>
                   </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-9">
@@ -705,23 +702,23 @@ Nostrud duis molestie at dolore.</p>
     <!--[if lt IE 9]>
     <script src="assets/plugins/respond.min.js"></script>  
     <![endif]-->  
-    <script src="assets/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>      
-    <script src="assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>      
+    <script src="theme/assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <!-- END CORE PLUGINS -->
 
     <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
-    <script src='assets/plugins/zoom/jquery.zoom.min.js' type="text/javascript"></script><!-- product zoom -->
-    <script src="assets/plugins/bootstrap-touchspin/bootstrap.touchspin.js" type="text/javascript"></script><!-- Quantity -->
-    <script src="assets/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/rateit/src/jquery.rateit.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
+    <script src="theme/assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+    <script src='theme/assets/plugins/zoom/jquery.zoom.min.js' type="text/javascript"></script><!-- product zoom -->
+    <script src="theme/assets/plugins/bootstrap-touchspin/bootstrap.touchspin.js" type="text/javascript"></script><!-- Quantity -->
+    <script src="theme/assets/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/rateit/src/jquery.rateit.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script><!-- for slider-range -->
 
-    <script src="assets/corporate/scripts/layout.js" type="text/javascript"></script>
+    <script src="theme/assets/corporate/scripts/layout.js" type="text/javascript"></script>
     <script type="text/javascript">
         jQuery(document).ready(function() {
             Layout.init();    
