--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -309,7 +309,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/book.jpg" class="img-responsive" alt="World of Eric Carle: Around the Farm Sound Book "></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/book.jpg" class="img-responsive" alt="World of Eric Carle: Around the Farm Sound Book "></a>
                           </div>
                           <h3><a href="item.html">World of Eric Carle: Around the Farm Sound Book </a></h3>
                           <div class="pi-price">$29.80</div>
@@ -319,7 +319,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/timar.jpg" class="img-responsive" alt="Dog Clippers Grooming Kit and Paw Trimmer,Cordless,Low Noise, Electric Quiet,Rechargeable, Dog Trimmer Grooming, Pet Hair Clippers for Thick Coats,Shaver for Small and Large Dogs Cats"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/timar.jpg" class="img-responsive" alt="Dog Clippers Grooming Kit and Paw Trimmer,Cordless,Low Noise, Electric Quiet,Rechargeable, Dog Trimmer Grooming, Pet Hair Clippers for Thick Coats,Shaver for Small and Large Dogs Cats"></a>
                           </div>
                           <h3><a href="item.html">Dog Clippers Grooming Kit and Paw Trimmer,Cordless,Low Noise, Electric Quiet,Rechargeable, Dog Trimmer Grooming, Pet Hair Clippers for Thick Coats,Shaver for Small and Large Dogs Cats</a></h3>
                           <div class="pi-price">$27.90</div>
@@ -329,7 +329,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/click.jpg" class="img-responsive" alt="PetSafe Clik-R Dog Training Clicker"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/click.jpg" class="img-responsive" alt="PetSafe Clik-R Dog Training Clicker"></a>
                           </div>
                           <h3><a href="item.html">PetSafe Clik-R Dog Training Clicker</a></h3>
                           <div class="pi-price">$23.40</div>
@@ -339,7 +339,7 @@
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/ul.jpg" class="img-responsive" alt="Chuckit! Ultra Tumbler Dog Fetch Toy"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/ul.jpg" class="img-responsive" alt="Chuckit! Ultra Tumbler Dog Fetch Toy"></a>
                           </div>
                           <h3><a href="item.html">Chuckit! Ultra Tumbler Dog Fetch Toy</a></h3>
                           <div class="pi-price">$9.80</div>
@@ -378,9 +378,6 @@
                 <li><a href="terms-conditions-page.html">Terms &amp; Conditions</a></li>
               </ul>
             </li>
-            
-            
-            <li><a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes&amp;utm_source=download&amp;utm_medium=banner&amp;utm_campaign=metronic_frontend_freebie" target="_blank">Admin theme</a></li>
 
             <!-- BEGIN TOP SEARCH -->
             <li class="menu-search">
@@ -426,7 +423,7 @@
                   </tr>
                   <tr>
                     <td class="goods-page-image">
-                      <a href="javascript:;"><img src="assets/pages/img/products/push.jpg" alt="Suction Hooks LUXEAR Powerful Vacuum Suction Cup Hooks- Heavy Duty Kitchen Suction Cup Holder Shower Hook for Towel Robe Loofah - White Waterproof Suction Holder- for Bathroom Kitchen Restroom (6Pack)"></a>
+                      <a href="javascript:;"><img src="theme/assets/pages/img/products/push.jpg" alt="Suction Hooks LUXEAR Powerful Vacuum Suction Cup Hooks- Heavy Duty Kitchen Suction Cup Holder Shower Hook for Towel Robe Loofah - White Waterproof Suction Holder- for Bathroom Kitchen Restroom (6Pack)"></a>
                     </td>
                     <td class="goods-page-description">
                       <h3><a href="javascript:;">Suction Hooks LUXEAR Powerful Vacuum Suction Cup Hooks- Heavy Duty Kitchen Suction Cup Holder Shower Hook for Towel Robe Loofah - White Waterproof Suction Holder- for Bathroom Kitchen Restroom (6Pack)</a></h3>
@@ -453,7 +450,7 @@
                   </tr>
                   <tr>
                     <td class="goods-page-image">
-                      <a href="javascript:;"><img src="assets/pages/img/products/bbb.jpg" alt="Clear Glass Tea Infuser Mug with Strainer and Lid 500ml Steeper Tea Cup for Loose Tea Cute Mushroom Gift Tea Mugs for Women Tea Lovers Dad Grandpa"></a>
+                      <a href="javascript:;"><img src="theme/assets/pages/img/products/bbb.jpg" alt="Clear Glass Tea Infuser Mug with Strainer and Lid 500ml Steeper Tea Cup for Loose Tea Cute Mushroom Gift Tea Mugs for Women Tea Lovers Dad Grandpa"></a>
                     </td>
                     <td class="goods-page-description">
                       <h3><a href="javascript:;">Clear Glass Tea Infuser Mug with Strainer and Lid 500ml Steeper Tea Cup for Loose Tea Cute Mushroom Gift Tea Mugs for Women Tea Lovers Dad Grandpa</a></h3>
@@ -514,9 +511,9 @@
               <div>
                 <div class="product-item">
                   <div class="pi-img-wrapper">
-                    <img src="assets/pages/img/products/mog.jpg" class="img-responsive" alt="Skater KE4AAG-A Minecraft Antibacterial Cup, 6.8 fl oz (200 ml), Dishwasher Safe, Made in Japan">
+                    <img src="theme/assets/pages/img/products/mog.jpg" class="img-responsive" alt="Skater KE4AAG-A Minecraft Antibacterial Cup, 6.8 fl oz (200 ml), Dishwasher Safe, Made in Japan">
                     <div>
-                      <a href="assets/pages/img/products/mog.jpg" class="btn btn-default fancybox-button">Zoom</a>
+                      <a href="theme/assets/pages/img/products/mog.jpg" class="btn btn-default fancybox-button">Zoom</a>
                       <a href="#product-pop-up" class="btn btn-default fancybox-fast-view">View</a>
                     </div>
                   </div>
@@ -529,9 +526,9 @@
               <div>
                 <div class="product-item">
                   <div class="pi-img-wrapper">
-                    <img src="assets/pages/img/products/pilob.jpg" class="img-responsive" alt="Lumbar Support Pillow for Office Chair Back Support">
+                    <img src="theme/assets/pages/img/products/pilob.jpg" class="img-responsive" alt="Lumbar Support Pillow for Office Chair Back Support">
                     <div>
-                      <a href="assets/pages/img/products/pilob.jpg" class="btn btn-default fancybox-button">Zoom</a>
+                      <a href="theme/assets/pages/img/products/pilob.jpg" class="btn btn-default fancybox-button">Zoom</a>
                       <a href="#product-pop-up" class="btn btn-default fancybox-fast-view">View</a>
                     </div>
                   </div>
@@ -543,9 +540,9 @@
               <div>
                 <div class="product-item">
                   <div class="pi-img-wrapper">
-                    <img src="assets/pages/img/products/dak.jpg" class="img-responsive" alt="OXO Good Grips Stainless Steel Measuring Cups with Magnetic Snaps, Silver">
+                    <img src="theme/assets/pages/img/products/dak.jpg" class="img-responsive" alt="OXO Good Grips Stainless Steel Measuring Cups with Magnetic Snaps, Silver">
                     <div>
-                      <a href="assets/pages/img/products/dak.jpg" class="btn btn-default fancybox-button">Zoom</a>
+                      <a href="theme/assets/pages/img/products/dak.jpg" class="btn btn-default fancybox-button">Zoom</a>
                       <a href="#product-pop-up" class="btn btn-default fancybox-fast-view">View</a>
                     </div>
                   </div>
@@ -557,9 +554,9 @@
               <div>
                 <div class="product-item">
                   <div class="pi-img-wrapper">
-                    <img src="assets/pages/img/products/jj.jpg" class="img-responsive" alt="Joseph Joseph Easy Store Slim Squeegee, 70560, Gray, One Size">
+                    <img src="theme/assets/pages/img/products/jj.jpg" class="img-responsive" alt="Joseph Joseph Easy Store Slim Squeegee, 70560, Gray, One Size">
                     <div>
-                      <a href="assets/pages/img/products/jj.jpg" class="btn btn-default fancybox-button">Zoom</a>
+                      <a href="theme/assets/pages/img/products/jj.jpg" class="btn btn-default fancybox-button">Zoom</a>
                       <a href="#product-pop-up" class="btn btn-default fancybox-fast-view">View</a>
                     </div>
                   </div>
@@ -572,9 +569,9 @@
               <div>
                 <div class="product-item">
                   <div class="pi-img-wrapper">
-                    <img src="assets/pages/img/products/webc.jpg" class="img-responsive" alt="1080P Webcam with Microphone">
+                    <img src="theme/assets/pages/img/products/webc.jpg" class="img-responsive" alt="1080P Webcam with Microphone">
                     <div>
-                      <a href="assets/pages/img/products/webc.jpg" class="btn btn-default fancybox-button">Zoom</a>
+                      <a href="theme/assets/pages/img/products/webc.jpg" class="btn btn-default fancybox-button">Zoom</a>
                       <a href="#product-pop-up" class="btn btn-default fancybox-fast-view">View</a>
                     </div>
                   </div>
@@ -586,9 +583,9 @@
               <div>
                 <div class="product-item">
                   <div class="pi-img-wrapper">
-                    <img src="assets/pages/img/products/mat.jpg" class="img-responsive" alt="Deluxe Bathroom Floor Mat">
+                    <img src="theme/assets/pages/img/products/mat.jpg" class="img-responsive" alt="Deluxe Bathroom Floor Mat">
                     <div>
-                      <a href="assets/pages/img/products/mat.jpg" class="btn btn-default fancybox-button">Zoom</a>
+                      <a href="theme/assets/pages/img/products/mat.jpg" class="btn btn-default fancybox-button">Zoom</a>
                       <a href="#product-pop-up" class="btn btn-default fancybox-fast-view">View</a>
                     </div>
                   </div>
@@ -732,11 +729,11 @@
           <!-- BEGIN PAYMENTS -->
           <div class="col-md-4 col-sm-4">
             <ul class="list-unstyled list-inline pull-right">
-              <li><img src="assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
-              <li><img src="assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
-              <li><img src="assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
-              <li><img src="assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
-              <li><img src="assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
+              <li><img src="theme/assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
+              <li><img src="theme/assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
+              <li><img src="theme/assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
+              <li><img src="theme/assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
+              <li><img src="theme/assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
             </ul>
           </div>
           <!-- END PAYMENTS -->
@@ -756,12 +753,12 @@
               <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-3">
                   <div class="product-main-image">
-                    <img src="assets/pages/img/products/gaa.jpg" alt="Electric Car" class="img-responsive">
+                    <img src="theme/assets/pages/img/products/gaa.jpg" alt="Electric Car" class="img-responsive">
                   </div>
                   <div class="product-other-images">
-                    <a href="javascript:;" class="active"><img alt="The Complete Moon Base Alpha: Space Case; Spaced Out; Waste of Space" src="assets/pages/img/products/bookk.jpg"></a>
-                    <a href="javascript:;"><img alt="Learning Resources LER6708 Snap n Learn Dinos Set (18 Piece),Multi Color" src="assets/pages/img/products/pak.jpg"></a>
-                    <a href="javascript:;"><img alt="Manhattan Toy Winkel Rattle and Sensory Teether Activity Toy" src="assets/pages/img/products/pak2.jpg"></a>
+                    <a href="javascript:;" class="active"><img alt="The Complete Moon Base Alpha: Space Case; Spaced Out; Waste of Space" src="theme/assets/pages/img/products/bookk.jpg"></a>
+                    <a href="javascript:;"><img alt="Learning Resources LER6708 Snap n Learn Dinos Set (18 Piece),Multi Color" src="theme/assets/pages/img/products/pak.jpg"></a>
+                    <a href="javascript:;"><img alt="Manhattan Toy Winkel Rattle and Sensory Teether Activity Toy" src="theme/assets/pages/img/products/pak2.jpg"></a>
                   </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-9">
@@ -816,23 +813,23 @@
     <!--[if lt IE 9]>
     <script src="assets/plugins/respond.min.js"></script>  
     <![endif]-->  
-    <script src="assets/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>      
-    <script src="assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>      
+    <script src="theme/assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <!-- END CORE PLUGINS -->
 
     <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
-    <script src='assets/plugins/zoom/jquery.zoom.min.js' type="text/javascript"></script><!-- product zoom -->
-    <script src="assets/plugins/bootstrap-touchspin/bootstrap.touchspin.js" type="text/javascript"></script><!-- Quantity -->
-    <script src="assets/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/rateit/src/jquery.rateit.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
+    <script src="theme/assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+    <script src='theme/assets/plugins/zoom/jquery.zoom.min.js' type="text/javascript"></script><!-- product zoom -->
+    <script src="theme/assets/plugins/bootstrap-touchspin/bootstrap.touchspin.js" type="text/javascript"></script><!-- Quantity -->
+    <script src="theme/assets/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/rateit/src/jquery.rateit.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script><!-- for slider-range -->
 
-    <script src="assets/corporate/scripts/layout.js" type="text/javascript"></script>
+    <script src="theme/assets/corporate/scripts/layout.js" type="text/javascript"></script>
     <script type="text/javascript">
         jQuery(document).ready(function() {
             Layout.init();    
