--- a/terms-conditions-page.html
+++ b/terms-conditions-page.html
@@ -1,17 +1,5 @@
 <!DOCTYPE html>
-<!--
-Template: Metronic Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-Version: 1.0.0
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
--->
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!-->
+
 <html lang="en">
 <!--<![endif]-->
 
@@ -127,7 +115,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- BEGIN HEADER -->
     <div class="header">
       <div class="container">
-        <a class="site-logo" href="index.html"><img src="assets/corporate/img/logos/logo-shop-red.png" alt="Metronic Shop UI"></a>
+        <a class="site-logo" href="index.html"><img src="theme/assets/corporate/img/logos/logo-shop-red.png" alt="Metronic Shop UI"></a>
 
         <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
 
@@ -143,35 +131,35 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
             <div class="top-cart-content">
               <ul class="scroller" style="height: 250px;">
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/drw.jpg" alt="OSJ Round Dining Set, 3-Piece Set, Dining Table, Dining Table, 2 Chairs, Width 27.6 inches (70 cm), Compact Size, 2 Seater, Stylish, New Life" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/drw.jpg" alt="OSJ Round Dining Set, 3-Piece Set, Dining Table, Dining Table, 2 Chairs, Width 27.6 inches (70 cm), Compact Size, 2 Seater, Stylish, New Life" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">OSJ Round Dining Set, 3-Piece Set, Dining Table, Dining Table, 2 Chairs, Width 27.6 inches (70 cm), Compact Size, 2 Seater, Stylish, New Life</a></strong>
                   <em>$99</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/bag4.jpg" alt="Endo Shoji Commercial Wine Basket, Brass, Silver Plated" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/bag4.jpg" alt="Endo Shoji Commercial Wine Basket, Brass, Silver Plated" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">Endo Shoji Commercial Wine Basket, Brass, Silver Plated</a></strong>
                   <em>$21</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/in.jpg" alt="Alessi "Noe" Modular Bottle Holder In Thermoplastic Resin, Black" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/in.jpg" alt="Alessi "Noe" Modular Bottle Holder In Thermoplastic Resin, Black" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">Alessi "Noe" Modular Bottle Holder In Thermoplastic Resin, Black</a></strong>
                   <em>$22</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/bottle.jpg" alt="LARGER Compartment - 3 Tier Stackable Water Bottle Organizer Holder" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/bottle.jpg" alt="LARGER Compartment - 3 Tier Stackable Water Bottle Organizer Holder" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">LARGER Compartment - 3 Tier Stackable Water Bottle Organizer Holder</a></strong>
                   <em>$21</em>
                   <a href="javascript:void(0);" class="del-goods">&nbsp;</a>
                 </li>
                 <li>
-                  <a href="item.html"><img src="assets/pages/img/vv.jpg" alt="Oceanstar WR1132 12-Bottle Bamboo Wine Rack, Dark Espresso" width="37" height="34"></a>
+                  <a href="item.html"><img src="theme/assets/pages/img/vv.jpg" alt="Oceanstar WR1132 12-Bottle Bamboo Wine Rack, Dark Espresso" width="37" height="34"></a>
                   <span class="cart-content-count">x 1</span>
                   <strong><a href="item.html">Oceanstar WR1132 12-Bottle Bamboo Wine Rack, Dark Espresso</a></strong>
                   <em>$24</em>
@@ -272,11 +260,11 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                       </div>
                       <div class="col-md-12 nav-brands">
                         <ul>
-                          <li><a href="product-list.html"><img title="esprit" alt="esprit" src="assets/pages/img/brands/esprit.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="gap" alt="gap" src="assets/pages/img/brands/gap.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="next" alt="next" src="assets/pages/img/brands/next.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="puma" alt="puma" src="assets/pages/img/brands/puma.jpg"></a></li>
-                          <li><a href="product-list.html"><img title="zara" alt="zara" src="assets/pages/img/brands/zara.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="esprit" alt="esprit" src="theme/assets/pages/img/brands/esprit.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="gap" alt="gap" src="theme/assets/pages/img/brands/gap.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="next" alt="next" src="theme/assets/pages/img/brands/next.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="puma" alt="puma" src="theme/assets/pages/img/brands/puma.jpg"></a></li>
+                          <li><a href="product-list.html"><img title="zara" alt="zara" src="theme/assets/pages/img/brands/zara.jpg"></a></li>
                         </ul>
                       </div>
                     </div>
@@ -297,7 +285,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/air.jpg" class="img-responsive" alt="Mistral MAC10000R - Air Cooler With Remote Control, 10L, 24 Hours Timer, Black & White Colour"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/air.jpg" class="img-responsive" alt="Mistral MAC10000R - Air Cooler With Remote Control, 10L, 24 Hours Timer, Black & White Colour"></a>
                           </div>
                           <h3><a href="item.html">Mistral MAC10000R - Air Cooler With Remote Control, 10L, 24 Hours Timer, Black & White Colour</a></h3>
                           <div class="pi-price">$149.00</div>
@@ -307,7 +295,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/metal.jpg" class="img-responsive" alt="JISULIFE Portable Handheld Turbo Fan, 100 Speeds Adjustable Mini Personal Fan, 9000mAh USB Rechargeable Battery Operated, LED Display, Metal Shell with Accessories Gifts for Men Women Travel- Grey"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/metal.jpg" class="img-responsive" alt="JISULIFE Portable Handheld Turbo Fan, 100 Speeds Adjustable Mini Personal Fan, 9000mAh USB Rechargeable Battery Operated, LED Display, Metal Shell with Accessories Gifts for Men Women Travel- Grey"></a>
                           </div>
                           <h3><a href="item.html">JISULIFE Portable Handheld Turbo Fan, 100 Speeds Adjustable Mini Personal Fan, 9000mAh USB Rechargeable Battery Operated, LED Display, Metal Shell with Accessories Gifts for Men Women Travel- Grey</a></h3>
                           <div class="pi-price">$77.80</div>
@@ -317,7 +305,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/remot.jpg" class="img-responsive" alt="Replacement Remote Control Compatible with MITSUBISHI Air Con AC"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/remot.jpg" class="img-responsive" alt="Replacement Remote Control Compatible with MITSUBISHI Air Con AC"></a>
                           </div>
                           <h3><a href="item.html">Replacement Remote Control Compatible with MITSUBISHI Air Con AC</a></h3>
                           <div class="pi-price">$14.00</div>
@@ -327,7 +315,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                       <div class="col-md-3 col-sm-4 col-xs-6">
                         <div class="product-item">
                           <div class="pi-img-wrapper">
-                            <a href="item.html"><img src="assets/pages/img/products/tplink.jpg" class="img-responsive" alt="TP-Link Tapo H110 Smart Home, Infrared Smart Hub, Air Conditioner, TV, Remote Control, Chime Function, Sub-1GHz"></a>
+                            <a href="item.html"><img src="theme/assets/pages/img/products/tplink.jpg" class="img-responsive" alt="TP-Link Tapo H110 Smart Home, Infrared Smart Hub, Air Conditioner, TV, Remote Control, Chime Function, Sub-1GHz"></a>
                           </div>
                           <h3><a href="item.html">TP-Link Tapo H110 Smart Home, Infrared Smart Hub, Air Conditioner, TV, Remote Control, Chime Function, Sub-1GHz</a></h3>
                           <div class="pi-price">$19.30</div>
@@ -366,9 +354,6 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <li class="active"><a href="terms-conditions-page.html">Terms &amp; Conditions</a></li>
               </ul>
             </li>
-            
-            
-            <li><a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes&amp;utm_source=download&amp;utm_medium=banner&amp;utm_campaign=metronic_frontend_freebie" target="_blank">Admin theme</a></li>
 
             <!-- BEGIN TOP SEARCH -->
             <li class="menu-search">
@@ -445,18 +430,18 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <div class="brands">
       <div class="container">
             <div class="owl-carousel owl-carousel6-brands">
-              <a href="product-list.html"><img src="assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
-              <a href="product-list.html"><img src="assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/canon.jpg" alt="canon" title="canon"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/esprit.jpg" alt="esprit" title="esprit"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/gap.jpg" alt="gap" title="gap"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/next.jpg" alt="next" title="next"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/puma.jpg" alt="puma" title="puma"></a>
+              <a href="product-list.html"><img src="theme/assets/pages/img/brands/zara.jpg" alt="zara" title="zara"></a>
             </div>
         </div>
     </div>
@@ -590,11 +575,11 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
           <!-- BEGIN PAYMENTS -->
           <div class="col-md-4 col-sm-4">
             <ul class="list-unstyled list-inline pull-right">
-              <li><img src="assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
-              <li><img src="assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
-              <li><img src="assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
-              <li><img src="assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
-              <li><img src="assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
+              <li><img src="theme/assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
+              <li><img src="theme/assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
+              <li><img src="theme/assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
+              <li><img src="theme/assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
+              <li><img src="theme/assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
             </ul>
           </div>
           <!-- END PAYMENTS -->
@@ -613,18 +598,18 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!--[if lt IE 9]>
     <script src="assets/plugins/respond.min.js"></script>  
     <![endif]-->  
-    <script src="assets/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>      
-    <script src="assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>      
+    <script src="theme/assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
+    <script src="theme/assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <!-- END CORE PLUGINS -->
 
     <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+    <script src="theme/assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
+    <script src="theme/assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
 
-    <script src="assets/corporate/scripts/layout.js" type="text/javascript"></script>
+    <script src="theme/assets/corporate/scripts/layout.js" type="text/javascript"></script>
     <script type="text/javascript">
         jQuery(document).ready(function() {
             Layout.init();    
